- Fixed bug: On section where you can buy things: If you drop an object that can be buy, if you re-pick it, 
  the object sell disappears
- Fixed bug: At the start of each book, if the player had not a backpack, pick one.

1.7.1
- Fixed bug with number of disciplines to choose if you have played previous books

1.7.2
- Fixed bug on book 6 / sect271: If the random number was 5 or less, no choice was activated

1.8
- Book 7 available
- Show authors biography
- Added warning about book 5 map (cities flags)

1.9
- Book 8 available
- Import / export saved games
- Kai monastery safekeeping: Now you can drop objects on the Kai monastery and they will be available on the next book
- Combats: Explain combat ratio link
- Added 6 arrows limit for quivers
- Added "Lore-circles of the Magnakai" to "Game rules"
- Book 1, sect342: Fixed bug with mindblast
- Fixed bug on book 5 / sect242: +3 for Mindshield was not applied
- Book 5, sect29, sect305: Fixed bug dropping rope
- Book 3, sect155: Fixed bug if you pick 9 on the Random table and you had Endurance > 20 (wrong bonus)
- Book 1, sect307: Fixed bug (missed pick Meal)

1.9.1
- Fixed bug downloading books on Android 4.4
- Book 6, sect307: Fixed bug (you can buy many meals as you want)
- Book 2, sect238: Fixed bug with the "silver token" (semi-fixed, now you get 1 Gold Crown)
- Book 4, sect283: Fixed bug, drop Flask of Holy Water

1.10
- Book 9 and 10 available
- Brian Williams objects illustrations support
- Now map don't count for the 12 Special Items limit
- Added FAQ section
- Now Random Table is manual by default (more fun!)
- Book 6, sect259: Bug with disciplines. Divination should be Nexus
- Book 8, sect183 and sect47: Added message about the Paido's sword. Sword changed to count as zero items (be sure you always pick it).
- Fixed bug on link to the current PAON license
- Update combat state after any object is picked

1.11
 - Upgrade of book 1 and 3 to the latest version